<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph.xml"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.mango.test_tech_project.presentation.sign_in_screen.SignInFragment"
        android:label="@string/SignIn"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signInFragment_to_verifyFragment"
            app:destination="@id/verifyFragment"
            app:popUpTo="@id/signInFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.mango.test_tech_project.presentation.sign_up_screen.SignUpFragment"
        android:label="@string/SignUp"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_profileFragment"
            app:destination="@id/navigation_profile"
            app:popUpTo="@id/signUpFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="number"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@id/navigation_profile"
        android:name="com.mango.test_tech_project.presentation.profile_screen.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/navigation_profile"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/verifyFragment"
        android:name="com.mango.test_tech_project.presentation.verify_screen.VerifyFragment"
        android:label="@string/SignIn"
        tools:layout="@layout/fragment_verify">
        <action
            android:id="@+id/action_verifyFragment_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:popUpTo="@id/verifyFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_verifyFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:popUpTo="@id/verifyFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="number"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.mango.test_tech_project.presentation.edit_profile_screen.EditProfileFragment"
        android:label="@string/EditProfile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_editProfileFragment_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:popUpTo="@id/editProfileFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.mango.test_tech_project.presentation.splash_screen.SplashFragment"
        android:label="SplashFragment" >
        <action
            android:id="@+id/action_splashFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>